...
        static let signUpTitle = "Sign Up and Refer Your Friends"
        static let signUpText = "SShare your referral code with friends and get rewarded when they place their first order."
        static let signUpEmailText = "Email Address"
        static let signUpButton = "Sign Up"
        static let joinTitle = "Join Referral Program"
        static let joinText = "Join our referral program and share your referral code with friends to get rewarded."
        static let joinButton = "Start Referring"
        static let referTitle = "Start Referring"
        static let referText = "Your referral code is ready! Share the referral code with your friends and get rewarded when they place their first order."
        static let referEmailText = "Enter the email addresses of your friends…"
        static let commaText = "Add a comma after each email address."
        static let shareText = "Share Invite"
        static let copyText = "Copy"
        static let copiedText = "Referral link copied"
        static let doneButton = "Done"
        static let successTab = "Completed"
        static let inProgressTab = "In Progress"
        static let sectionOneTitle = "Recent"
        static let sectionTwoTitle = "One Month Ago"
        static let sectionThreeTitle = "Three Months Ago"
        static let shareReferralText = "Use my referral link to sign up: "
        static let noReferralsFound = "After you refer a friend, you’ll see it here."
        static let emailSentAlertTitle = "Email Sent"
        static let emailSentAlertText = "An invitation email was sent to your friends with your referral link."
        static let emailUnableToSent = "Something doesn't look right with one of the email addresses."
        static let emailValidationError = "Something doesn't look right with one of the email addresses."
        static let enrollmentError = "We couldn’t enroll you as a member of the referral program. Try joining again."
        static let genericError = "Oops! Something went wrong while processing the request. Try again."
        static let expiredPromotionError = "You missed the boat! \n You can no longer refer your friends because the referral promotion has expired."
        static let notEnabledMessage = "The referral promotion isn’t available."
        // swiftlint:disable line_length
...
