...
        static let logout = "logout_button"
        static let game = "game_label"
        static let referrals = "referrals_label"
    }
    
    enum Promotion {
        static let header = "promotion_header"
        static let searchImage = "search_image"
        static let viewAll = "view_all"
        static let image = "image"
        static let name = "name"
        static let description = "description"
        static let endDate = "end_date"
        static let shopButton = "shop_button"
        static let joinButton = "join_button"
        static let dismissButton = "dismiss_button"
        static let leaveButton = "leave_button"
    }
    
    enum Home {
        static let userName = "username_label"
        static let rewardPoints = "reward_points_label"
        static let homePromotion = "home_promotion"
        
    }
    
    enum Voucher {
        static let header = "voucher_header"
...
		static let receiptAmountText = "receipt_amount_text"
		static let receiptPointsText = "receipt_points_text"
        static let receiptManualReviewText = "receipt_manual_review_text"
		static let closeButton = "close_button"
		static let submitForManualReviewButton = "submit_for_manual_review_button"
		static let backButton = "back_button_in_manual_review"
		static let receiptsIcon = "receipts_icon"
        static let errorBackButton = "back_button_in_error_view"
		static let noEligibleItemsFound = "no_eligible_items_found"
		static let eligibleItemsTitle = "eligible_items_title"
		static let ineligibleItemsTitle = "ineligible_items_title"
	}
    
    enum GameZone {
        static let header = "game_zone_header"
    }
    
    enum Referrals {
        static let referralsViewTitle = "referrals_title"
        static let referAFriendTitle = "refer_friend_title"
        static let email = "friend_email"
        static let referralCode = "referral_code"
        static let joinAndReferButton = "join_refer_button"
        static let emailErrorBackButton = "email_error_back_button"
        static let joinErrorBackButton = "join_error_back_button"
    }
}
...
