...
    
    var unenrolledView: some View {
        
        ScrollView {
            LazyVStack(spacing: 15) {
                if promotionVM.unenrolledPromotions.isEmpty {
                    EmptyStateView(title: "No Promotions, yet.",
                                   subTitle: "You do not have any eligibile promotions to enroll. Please come back later.")
                }
                ForEach(promotionVM.unenrolledPromotions) { promotion in
                    MyPromotionCardView(promotion: promotion)
                }
            }
            .frame(maxWidth: .infinity)
...
