...
    
    var body: some View {
        
        ZStack(alignment: .bottomLeading) {
            UITabView(selection: $selectedTab) {
                HomeView(selectedTab: $selectedTab)
                    .tabItem("Home", image: UIImage(named: "ic-home"))
                
                MyPromotionsView()
                    .tabItem("My Promotions", image: UIImage(named: "ic-rewards"))
                
                ProfileView()
                    .tabItem("My Profile", image: UIImage(named: "ic-profile"))
...
